Added feedback section

--- a/index.html
+++ b/index.html
@@ -945,6 +945,77 @@
 
   <!-- Testimonial Section End -->
 
+
+<!-- Feedback Section Starts-->
+<div class="feedbacks">
+  <div class="inner">
+    <h1 class="section-title wow fadeInDown mt-5" data-wow-delay="0.3s">Our <span> Feedbacks</span></h1>
+    <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
+  
+<div class="events_container wow fadeInDown">
+    <div class="row">
+      <div class="col">
+        <div class="feedback">
+          <img src="p1.png" alt="">    <!--Link the profile picture here-->
+          <div class="name">Full name</div>
+          <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+          </p>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="feedback">
+          <img src="p2.png" alt="">    <!--Link the profile picture here-->
+          <div class="name">Full name</div>
+          <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="far fa-star"></i>
+            <i class="far fa-star"></i>
+          </div>
+
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+          </p>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="feedback">
+          <img src="p3.png" alt="">    <!--Link the profile picture here-->
+          <div class="name">Full name</div>
+          <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="far fa-star"></i>
+          </div>
+
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+          </p>
+        </div>
+      </div>
+    </div>
+    </div>
+  </div>
+</div>
+
+<!--/ Feedback Section Ends-->
+
+<br><br>
+<br>
   <!-- events section starts -->
 
 
