--- a/index.html
+++ b/index.html
@@ -1124,11 +1124,20 @@
                 <img src="./assets/img/Partners/Geeks.jpg" class="communityPartner__image" alt="">
               </a>
             </div>
+
+            
             <div class="community_box box2">
               <a href="https://www.azdev.community/index.html#communities" style="text-decoration: none;" target="_blank">
                 <img src="./assets/img/Partners/Az.png" class="communityPartner__image" alt="">
               </a>
             </div>
+
+            <div class="img_container">
+              <div class="community_box box1">
+                <a href="https://givemycertificate.com/" style="text-decoration: none;" target="_blank">
+                  <img src="./assets/img/Partners/GMC LogoS.png" class="communityPartner__image" alt="">
+                </a>
+              </div>
           </div>
 
           </div>
