--- a/index.html
+++ b/index.html
@@ -1191,6 +1191,12 @@
                 <img src="./assets/img/Partners/Sudands.jpg" class="communityPartner__image" alt="">
               </a>
             </div>
+            <div class="img_container">
+              <div class="community_box box5">
+                <a href="https://lu.ma/DesignandCode" style="text-decoration: none;" target="_blank">
+                  <img src="./assets/img/Partners/DC_updated_Logo.png" class="communityPartner__image" alt="">
+                </a>
+              </div>
             <div class="community_box box5">
               <a href="https://linktr.ee/lwmcommunity" style="text-decoration: none;" target="_blank">
                 <img src="./assets/img/Partners/LWM.png" class="communityPartner__image" alt="">
