--- a/index.html
+++ b/index.html
@@ -1313,7 +1313,7 @@ s0.parentNode.insertBefore(s1,s0);
           <div class="col-lg-2 col-md-6 col-sm-12 col-xs-12">
             <h3 class="footer-titel">Join Us</h3>
             <ul class="footer-link">
-              <li><a href="#">Events</a></li>
+              <li><a href="#events">Events</a></li>
               <li><a href="#">Hackathons</a></li>
               <li><a href="#">Open Source</a></li>
               <li><a href="#">Volunteer Group</a></li>
