Code Optimization and function allocation to discrete files

--- a/index.html
+++ b/index.html
@@ -1272,17 +1272,7 @@
 
 <!-- Live Chat added -->
 <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/615f64df157d100a41ab54f3/1fhea43dh';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
+<srcipt src="./JS/Tawk.js"></srcipt>       <!--Re-allocated the code to JS Folder-->
 <!--End of Tawk.to Script-->
 
   <!-- Footer Section Start -->
@@ -1388,16 +1378,7 @@ s0.parentNode.insertBefore(s1,s0);
 
   <!-- counter scripts -->
 
-  <script>
-    
-    $(document).ready(function(){
-      $('.counter').counterUp({
-        delay: 10,
-        time: 400
-      });
-    });
-    
-  </script>
+  <script src="./JS/Counter1.js"></script>    <!--JS Function allocated to JS Folder-->
   <!-- counter scripts end -->
 
   <!-- emailjs cdn -->
