fixed the oppurtunities card to be of equal size on mobile screens

--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@
   <section id="opportunity" class="section-padding bg-white">
     <div class="container">
       <div class="section-header text-center">
-        <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Opportunity</h2>
+        <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Opportunities</h2>
         <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
       </div>
       <div class="card-group">
@@ -1045,7 +1045,7 @@
 
           </div>
         </div>
-        <div class="card">
+        <div class="card mx-5">
           <img src="./assets/img/opportunity/codein.png" class="card-img-top" alt="..." height="350px">
           <div class="card-body">
             <h5 class="card-title">Winter Fest 2022 🧑‍💻</h5>
