--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <!-- Owl carousel -->
   <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
   <link rel="stylesheet" href="assets/css/owl.theme.css">
+  <!--Enhance--!>
+  <link rel="stylesheet" href="enhance.css">
 
   <!--Swiper JS-->
   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
@@ -99,7 +101,7 @@
             <div class="contents">
 
               <h2 class="head-title">CodeIN Community </h2>
-              <p>CodeIN Community is the Community of Coding Enthusiasts Where we share Resources, Roadmaps and various
+              <p class="slide-left">CodeIN Community is the Community of Coding Enthusiasts Where we share Resources, Roadmaps and various
                 upcoming opportunities to learn different technologies. We organize various Tech Events, Webinars and
                 Workshops on different technologies. Together We aim to explore the untouched world of technology and
                 tremendous growth-making fields.</p>
