--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
   <!-- Responsive Style -->
   <link rel="stylesheet" href="assets/css/responsive.css">
   <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-png">
+  <!--Enhance Graphics--!>
+<link rel="stylesheet" href="enhance.css">
 
   <!-- counter imports -->
   <script src="assets/js/jquery-min.js"></script>
