--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
             <div class="contents">
 
               <h2 class="head-title">CodeIN Community </h2>
-              <p class="slide-left">CodeIN Community is the Community of Coding Enthusiasts Where we share Resources, Roadmaps and various
+              <p class="slide-left">CodeIN Community is the Community of Coding Enthusiasts where we share Resources, Roadmaps and various
                 upcoming opportunities to learn different technologies. We organize various Tech Events, Webinars and
-                Workshops on different technologies. Together We aim to explore the untouched world of technology and
+                Workshops on different technologies. Together, we aim to explore the untouched world of technology and
                 tremendous growth-making fields.</p>
               <div class="header-button">
                 <a href="https://codeincommunity.bio.link/" target="_blank" class="btn btn-common">Join Now</i></a>
