--- a/index.html
+++ b/index.html
@@ -63,27 +63,27 @@
               <a class="nav-link" href="#hero-area">
                 Home
               </a>
-            </li>
+            </li> &nbsp; &nbsp;
             <li class="nav-item">
               <a class="nav-link" href="#about">
                 About
               </a>
-            </li>
+            </li> &nbsp; &nbsp;
             <li class="nav-item">
               <a class="nav-link" href="#testimonials">
                 Team
               </a>
-            </li>
+            </li> &nbsp; &nbsp;
             <li class="nav-item">
               <a class="nav-link" href="#events">
                 Events
               </a>
-            </li>
+            </li> &nbsp; &nbsp;
             <li class="nav-item">
               <a class="nav-link" href="#opportunity">
                 Opportunity
               </a>
-            </li>
+            </li> &nbsp; &nbsp;
             <li class="nav-item">
               <a class="nav-link" href="#contact">
                 Contact
