--- a/index.html
+++ b/index.html
@@ -237,7 +237,8 @@
       <div class="row">
         <div class="col-lg-6 col-md-12 col-xs-12 info">
           <div class="about-wrapper wow fadeInLeft" data-wow-delay="0.3s">
-            <div>
+            </div>
+              <div class="box">
               <div class="site-heading">
                 <p class="mb-3">Explore opportunities!</p>
                 <h2 class="section-title">What We offer through the Community</h2>
@@ -260,6 +261,7 @@
       </div>
     </div>
   </div>
+</div>
   <!-- About Section End -->
 
   <!-- Testimonial Section Start -->
