added animations to landing page for mobile screen

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
   <link rel="stylesheet" href="assets/css/swipper.css">
   <!-- Animate -->
   <link rel="stylesheet" href="assets/css/animate.css">
+  <!-- animate-on-scroll -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!-- Main Style -->
   <link rel="stylesheet" href="assets/css/main.css">
   <!-- Responsive Style -->
@@ -37,6 +39,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
   <!-- counter imports end-->
+
+  <!-- animate on scroll import -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <!-- animate on scroll import end -->
 
 </head>
 
@@ -103,7 +109,7 @@
                 upcoming opportunities to learn different technologies. We organize various Tech Events, Webinars and
                 Workshops on different technologies. Together We aim to explore the untouched world of technology and
                 tremendous growth-making fields.</p>
-              <div class="header-button">
+              <div class="header-button" data-aos="fade-right" data-aos-duration="2000">
                 <a href="https://codeincommunity.bio.link/" target="_blank" class="btn btn-common">Join Now</i></a>
                 <a href="#about" class="btn btn-outline-danger btn-common video-popup">Learn More</i></a>
               </div>
@@ -126,13 +132,13 @@
   <!-- Services Section Start -->
   <section id="services" class="section-padding">
     <div class="container">
-      <div class="section-header text-center">
+      <div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
         <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Join Us Here</h2>
         <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
       </div>
       <div class="row">
         <!-- Services item -->
-        <div class="col-md-6 col-lg-4 col-xs-12">
+        <div class="col-md-6 col-lg-4 col-xs-12" data-aos="fade-up" data-aos-duration="1500">
           <div class="services-item wow fadeInRight" data-wow-delay="0.3s">
             <div class="icon">
               <a href="https://discord.com/invite/sqFRzrj7f3" target="_blank">
@@ -146,7 +152,7 @@
           </div>
         </div>
         <!-- Services item -->
-        <div class="col-md-6 col-lg-4 col-xs-12">
+        <div class="col-md-6 col-lg-4 col-xs-12" data-aos="fade-up" data-aos-duration="1500">
           <div class="services-item wow fadeInRight" data-wow-delay="0.6s">
             <div class="icon">
               <a href="https://t.me/CodeINCommunity" target="_blank">
@@ -161,7 +167,7 @@
           </div>
         </div>
         <!-- Services item -->
-        <div class="col-md-6 col-lg-4 col-xs-12">
+        <div class="col-md-6 col-lg-4 col-xs-12" data-aos="fade-up" data-aos-duration="1500">
           <div class="services-item wow fadeInRight" data-wow-delay="0.9s">
             <div class="icon">
               <a href="https://www.linkedin.com/company/codein-community/mycompany/" target="_blank">
@@ -176,7 +182,7 @@
           </div>
         </div>
         <!-- Services item -->
-        <div class="col-md-6 col-lg-4 col-xs-12">
+        <div class="col-md-6 col-lg-4 col-xs-12" data-aos="fade-up" data-aos-duration="1500">
           <div class="services-item wow fadeInRight" data-wow-delay="1.2s">
             <div class="icon">
               <a href="https://github.com/SauravMukherjee44/CodeIN-Community-Website" target="_blank">
@@ -191,7 +197,7 @@
           </div>
         </div>
         <!-- Services item -->
-        <div class="col-md-6 col-lg-4 col-xs-12">
+        <div class="col-md-6 col-lg-4 col-xs-12" data-aos="fade-up" data-aos-duration="1500">
           <div class="services-item wow fadeInRight" data-wow-delay="1.5s">
             <div class="icon">
               <a href="https://twitter.com/CodeinCommunity" target="_blank">
@@ -205,7 +211,7 @@
           </div>
         </div>
         <!-- Services item -->
-        <div class="col-md-6 col-lg-4 col-xs-12">
+        <div class="col-md-6 col-lg-4 col-xs-12" data-aos="fade-up" data-aos-duration="1500">
           <div class="services-item wow fadeInRight" data-wow-delay="1.8s">
             <div class="icon">
               <a href="https://www.youtube.com/channel/UCjzAiV0IpFJ45UgnHnc_4ug" target="_blank">
@@ -225,7 +231,7 @@
 
   <!-- About Section start -->
   <div id="about" class="about-area section-padding bg-gray">
-    <div class="section-header text-center">
+    <div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
       <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Benefits of Joining Us</h2>
       <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
     </div>
@@ -234,11 +240,11 @@
         <div class="col-lg-6 col-md-12 col-xs-12 info">
           <div class="about-wrapper wow fadeInLeft" data-wow-delay="0.3s">
             <div>
-              <div class="site-heading">
+              <div class="site-heading" data-aos="fade-left" data-aos-duration="1500">
                 <p class="mb-3">Explore opportunities!</p>
                 <h2 class="section-title">What We offer through the Community</h2>
               </div>
-              <div class="content">
+              <div class="content" data-aos="fade-up" data-aos-duration="1500">
                 <br>MENTOR'S GUIDE & SUPPORT</br>
                 <br>HELP EVERYONE TO LEARN & GROW</br>
                 <br>WORKSHOPS AND MEETING SESSIONS</br>
@@ -261,11 +267,11 @@
   <!-- Testimonial Section Start -->
   <section id="testimonial" class="testimonial section-padding">
 
-    <div class="section-header text-center">
+    <div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
       <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Meet Our Team</h2>
       <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
     </div>
-    <div class="container">
+    <div class="container" data-aos="fade-up" data-aos-duration="1500">
       <div class="row justify-content-center">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
           <div id="testimonials">
@@ -932,7 +938,7 @@
 
 <div class="events" id="events">
     <div class="container" style="max-width: 94%;">
-        <div class="section-header text-center">
+        <div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
             <h1 class="section-title wow fadeInDown mt-5" data-wow-delay="0.3s">Our <span> Events</span></h1>
             <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
         </div>
@@ -940,7 +946,7 @@
         <div class="events_container wow fadeInDown">
 
             <div class="events_box_row">
-                <div class="events_box">
+                <div class="events_box" data-aos="fade-up" data-aos-duration="1500">
                     <img src="./assets/img/Event/event1.jpeg" class="events_img" alt="" />
                     <div class="content ">
                         <h4>Full Stack Development</h4>
@@ -953,7 +959,7 @@
 
 
 
-                <div class="events_box">
+                <div class="events_box" data-aos="fade-up" data-aos-duration="1500">
                     <img src="./assets/img/Event/event3.png" class="events_img" alt="" />
                     <div class="content">
                         <h4>Get Started With Machine Learning</h4>
@@ -963,7 +969,7 @@
                     </div>
                 </div>
 
-                <div class="events_box">
+                <div class="events_box" data-aos="fade-up" data-aos-duration="1500">
                     <img src="./assets/img/Event/event2.png" class="events_img" alt="" />
                     <div class="content">
                         <h4>Google CrowdSource Contributions</h4>
@@ -975,7 +981,7 @@
 
 
 
-                <div class="events_box">
+                <div class="events_box" data-aos="fade-up" data-aos-duration="1500">
                     <img src="./assets/img/Event/event4.jpeg" class="events_img" alt="" />
                     <div class="content">
                         <h4> Introduction to HACKTOBERFEST' 2021</h4>
@@ -995,12 +1001,12 @@
   <!-- Opportunity start -->
   <section id="opportunity" class="section-padding bg-white">
     <div class="container">
-      <div class="section-header text-center">
+      <div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
         <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Opportunities</h2>
         <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
       </div>
       <div class="card-group">
-        <div class="card mx-5">
+        <div class="card mx-5" data-aos="fade-up" data-aos-duration="1500">
           <img src="./assets/img/opportunity/opp-1.jpg" class="card-img-top" alt="..." height="350px">
           <div class="card-body">
             <h5 class="card-title">Google Developer Student Clubs is come up with GDSC WOW</h5>
@@ -1022,7 +1028,7 @@
 
           </div>
         </div>
-        <div class="card mx-5">
+        <div class="card mx-5" data-aos="fade-up" data-aos-duration="1500">
           <img src="./assets/img/opportunity/opp-2.png" class="card-img-top" alt="..." height="350px">
           <div class="card-body">
             <h5 class="card-title">Spark-a-thon a hackathon- By CodeIN Community</h5>
@@ -1046,7 +1052,7 @@
 
           </div>
         </div>
-        <div class="card mx-5">
+        <div class="card mx-5" data-aos="fade-up" data-aos-duration="1500">
           <img src="./assets/img/opportunity/codein.png" class="card-img-top" alt="..." height="350px">
           <div class="card-body">
             <h5 class="card-title">Winter Fest 2022 🧑‍💻</h5>
@@ -1113,13 +1119,13 @@
   <!---- Sponsors
     ==================================== -->
     <div class="community_partner">
-      <div class="container">
+      <div class="container" data-aos="fade-up" data-aos-duration="1500">
         <h1 class="text-center mt-5 community_title wow fadeInDown animated" data-wow-duration="500ms">SPONSORS</h1>
         <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
       
         <div class="imgbox wow fadeInLeft animated">
   
-          <div class="img_container">
+          <div class="img_container" data-aos="fade-up" data-aos-duration="1500">
             <div class="community_box box1">
               <a href="https://www.geeksforgeeks.org/" style="text-decoration: none;" target="_blank">
                 <img src="./assets/img/Partners/Geeks.jpg" class="communityPartner__image" alt="">
@@ -1154,13 +1160,13 @@
   <!---- Community partner
     ==================================== -->
     <div class="community_partner">
-      <div class="container">
+      <div class="container" data-aos="fade-up" data-aos-duration="1500">
         <h1 class="text-center mt-5 community_title wow fadeInDown animated" data-wow-duration="500ms">OUR COMMUNITY PARTNERS</h1>
         <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
       
         <div class="imgbox wow fadeInLeft animated">
   
-          <div class="img_container">
+          <div class="img_container" data-aos="fade-up" data-aos-duration="1500">
             <div class="community_box box1">
               <a href="https://learnwith.community/" style="text-decoration: none;" target="_blank">
                 <img src="./assets/img/Partners/LWC.png" class="communityPartner__image" alt="">
@@ -1173,7 +1179,7 @@
             </div>
           </div>
   
-          <div class="img_container">
+          <div class="img_container" data-aos="fade-up" data-aos-duration="1500">
             <div class="community_box box3">
               <a href="https://linktr.ee/cs_sattva" style="text-decoration: none;" target="_blank">
                 <img src="./assets/img/Partners/Sattva.jpg" class="communityPartner__image" alt="">
@@ -1186,13 +1192,13 @@
             </div>
           </div>
   
-          <div class="img_container">
+          <div class="img_container" data-aos="fade-up" data-aos-duration="1500">
             <div class="community_box box5">
               <a href="https://www.linkedin.com/company/sudan-s-tech/" style="text-decoration: none;" target="_blank">
                 <img src="./assets/img/Partners/Sudands.jpg" class="communityPartner__image" alt="">
               </a>
             </div>
-            <div class="img_container">
+            <div class="img_container" data-aos="fade-up" data-aos-duration="1500">
               <div class="community_box box5">
                 <a href="https://lu.ma/DesignandCode" style="text-decoration: none;" target="_blank">
                   <img src="./assets/img/Partners/DC_updated_Logo.png" class="communityPartner__image" alt="">
@@ -1215,7 +1221,7 @@
    
 
   <!-- Contact Section Start -->
-  <section id="contact" class="section-padding bg-gray">
+  <section id="contact" class="section-padding bg-gray" data-aos="fade-up" data-aos-duration="1500">
     <div class="container">
       <div class="section-header text-center">
         <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Contact Us</h2>
@@ -1393,6 +1399,18 @@
 
   <!--navigate to top button script-->
   <script>
+    // initialize AOS
+    AOS.init({
+      disable: function(){
+        if(window.innerWidth > 767){
+          return true;
+        } else{
+          return false;
+        }
+      }
+    });
+    //initialize AOS ends
+
     navtbut = document.getElementById("navtbut");
 
   var navToTop = function () {
