--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
               </a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="./blog.html">
+                blogs
+              </a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#contact">
                 Contact
               </a>
