--- a/index.html
+++ b/index.html
@@ -1145,7 +1145,7 @@
                   <img src="./assets/img/Partners/GMC LogoS.png" class="communityPartner__image" alt="">
                 </a>
               </div>
-          </div>
+            </div>
 
           </div>
   
@@ -1198,7 +1198,7 @@
                 <img src="./assets/img/Partners/Sudands.jpg" class="communityPartner__image" alt="">
               </a>
             </div>
-            <div class="img_container" data-aos="fade-up" data-aos-duration="1500">
+            <!--<div class="img_container" data-aos="fade-up" data-aos-duration="1500">-->
               <div class="community_box box5">
                 <a href="https://lu.ma/DesignandCode" style="text-decoration: none;" target="_blank">
                   <img src="./assets/img/Partners/DC_updated_Logo.png" class="communityPartner__image" alt="">
@@ -1208,8 +1208,8 @@
               <a href="https://linktr.ee/lwmcommunity" style="text-decoration: none;" target="_blank">
                 <img src="./assets/img/Partners/LWM.png" class="communityPartner__image" alt="">
               </a>
-            </div>
-            
+          </div>
+          
           </div>
   
         </div>
