Different hover colors added to social media icons

--- a/index.html
+++ b/index.html
@@ -1336,25 +1336,25 @@
     </div>
     <ul class="socials">
       <li>
-        <a href="https://www.linkedin.com/company/codein-community/mycompany/" target="_blank"><i
+        <a class="linkedin" href="https://www.linkedin.com/company/codein-community/mycompany/" target="_blank"><i
             class="fab fa-linkedin"></i></a>
       </li>
       <li>
-        <a href=" https://discord.com/invite/sqFRzrj7f3" target="_blank"><i class="fab fa-discord"></i></a>
+        <a class="discord" href=" https://discord.com/invite/sqFRzrj7f3" target="_blank"><i class="fab fa-discord"></i></a>
       </li>
       <li>
-        <a href="https://t.me/CodeINCommunity"><i class="fab fa-telegram" target="_blank"></i></a>
+        <a class="telegram" href="https://t.me/CodeINCommunity"><i class="fab fa-telegram" target="_blank"></i></a>
       </li>
       <li>
-        <a href="https://github.com/SauravMukherjee44/CodeIN-Community-Website" target="_blank"><i
+        <a class="github" href="https://github.com/SauravMukherjee44/CodeIN-Community-Website" target="_blank"><i
             class="fab fa-github"></i></a>
       </li>
       <li>
-        <a href="https://www.youtube.com/channel/UCjzAiV0IpFJ45UgnHnc_4ug" target="_blank"><i
+        <a class="youtube" href="https://www.youtube.com/channel/UCjzAiV0IpFJ45UgnHnc_4ug" target="_blank"><i
             class="fab fa-youtube"></i></a>
       </li>
       <li>
-        <a href="https://twitter.com/CodeinCommunity" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a class="twitter" href="https://twitter.com/CodeinCommunity" target="_blank"><i class="fab fa-twitter"></i></a>
       </li>
     </ul>
     </div>
