--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
             <div class="contents">
 
               <h2 class="head-title">CodeIN Community </h2>
-              <p>CodeIN Community is the Community of Coding Enthusiasts Where we share Resources, Roadmaps and various
-                upcoming opportunities to learn different technologies. We organize various Tech Events, Webinars and
+              <p>CodeIN Community is the Community of Coding Enthusiasts where we share <strong>Resources</strong>, <strong>Roadmaps</strong> and various
+                upcoming <strong>opportunities</strong> to learn different technologies. We organize various <strong>Tech Events</strong>,<strong> Webinars</strong> and
                 Workshops on different technologies. Together We aim to explore the untouched world of technology and
                 tremendous growth-making fields.</p>
               <div class="header-button">
