--- a/index.html
+++ b/index.html
@@ -247,14 +247,16 @@
             <div>
               <div class="site-heading" data-aos="fade-left" data-aos-duration="1500">
                 <p class="mb-3">Explore opportunities!</p>
-                <h2 class="section-title">What We offer through the Community</h2>
+                <h2 class="section-title com">What We offer through the Community</h2>
               </div>
               <div class="content" data-aos="fade-up" data-aos-duration="1500">
-                <br>MENTOR'S GUIDE & SUPPORT</br>
-                <br>HELP EVERYONE TO LEARN & GROW</br>
-                <br>WORKSHOPS AND MEETING SESSIONS</br>
-                <br>PROVIDE LEARNING & INTERNSHIP OPPORTUNITY</br>
-                <br>EXPOSURE TO STUDENTS & MENTORS AROUND THE WORLD</br>
+                <ul class="section-feature">
+                  <li>&#x25BA; MENTOR'S GUIDE & SUPPORT</li>
+                  <li>&#x25BA; HELP EVERYONE TO LEARN & GROW</li>
+                  <li>&#x25BA; WORKSHOPS AND MEETING SESSIONS</li>
+                  <li>&#x25BA; PROVIDE LEARNING & INTERNSHIP OPPORTUNITY</li>
+                  <li>&#x25BA; EXPOSURE TO STUDENTS & MENTORS AROUND THE WORLD</li>
+                </ul>
 
                 <a href="./benefit.html" target="_blank" class="btn btn-common mt-3">Read More</a>
               </div>
