--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./blog.html">
-                blogs
+                Blogs
               </a>
             </li>
             <li class="nav-item">
