Changed title case of blog in the tab of the page

--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>CodeIN Community | blog Page </title>
+  <title>CodeIN Community | Blog Page </title>
 
 
   <!-- Bootstrap CSS -->
