--- a/blog.html
+++ b/blog.html
@@ -81,7 +81,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./blog.html">
-                blogs
+                Blogs
               </a>
             </li>
             <li class="nav-item">
