Added Hovering effect

--- a/index.html
+++ b/index.html
@@ -1133,21 +1133,20 @@
         <div class="imgbox wow fadeInLeft animated">
   
           <div class="img_container" data-aos="fade-up" data-aos-duration="1500">
-            <div class="community_box box1">
+            <div class="community_box box1" data-tilt data-tilt-scale="1.1">
               <a href="https://www.geeksforgeeks.org/" style="text-decoration: none;" target="_blank">
                 <img src="./assets/img/Partners/Geeks.jpg" class="communityPartner__image" alt="">
               </a>
             </div>
-
             
-            <div class="community_box box2">
+            <div class="community_box box2" data-tilt data-tilt-scale="1.1">
               <a href="https://www.azdev.community/index.html#communities" style="text-decoration: none;" target="_blank">
                 <img src="./assets/img/Partners/Az.png" class="communityPartner__image" alt="">
               </a>
             </div>
 
             <div class="img_container">
-              <div class="community_box box1">
+              <div class="community_box box1" data-tilt data-tilt-scale="1.1">
                 <a href="https://givemycertificate.com/" style="text-decoration: none;" target="_blank">
                   <img src="./assets/img/Partners/GMC LogoS.png" class="communityPartner__image" alt="">
                 </a>
@@ -1174,12 +1173,12 @@
         <div class="imgbox wow fadeInLeft animated">
   
           <div class="img_container" data-aos="fade-up" data-aos-duration="1500">
-            <div class="community_box box1">
+            <div class="community_box box1" data-tilt data-tilt-scale="1.1">
               <a href="https://learnwith.community/" style="text-decoration: none;" target="_blank">
                 <img src="./assets/img/Partners/LWC.png" class="communityPartner__image" alt="">
               </a>
             </div>
-            <div class="community_box box2">
+            <div class="community_box box2" data-tilt data-tilt-scale="1.1">
               <a href="https://gdsc.community.dev/kalindi-college-delhi/" style="text-decoration: none;" target="_blank">
                 <img src="./assets/img/Partners/GDSC_kalindi.jpg" class="communityPartner__image" alt="">
               </a>
@@ -1187,12 +1186,12 @@
           </div>
   
           <div class="img_container" data-aos="fade-up" data-aos-duration="1500">
-            <div class="community_box box3">
+            <div class="community_box box3" data-tilt data-tilt-scale="1.1">
               <a href="https://linktr.ee/cs_sattva" style="text-decoration: none;" target="_blank">
                 <img src="./assets/img/Partners/Sattva.jpg" class="communityPartner__image" alt="">
               </a>
             </div>
-            <div class="community_box box4">
+            <div class="community_box box4" data-tilt data-tilt-scale="1.1">
               <a href="https://www.linkedin.com/company/algoderscommunity/" style="text-decoration: none;" target="_blank">
                 <img src="./assets/img/Partners/Algo.jpeg" class="communityPartner__image" alt="">
               </a>
@@ -1200,18 +1199,18 @@
           </div>
   
           <div class="img_container" data-aos="fade-up" data-aos-duration="1500">
-            <div class="community_box box5">
+            <div class="community_box box5" data-tilt data-tilt-scale="1.1">
               <a href="https://www.linkedin.com/company/sudan-s-tech/" style="text-decoration: none;" target="_blank">
                 <img src="./assets/img/Partners/Sudands.jpg" class="communityPartner__image" alt="">
               </a>
             </div>
             <!--<div class="img_container" data-aos="fade-up" data-aos-duration="1500">-->
-              <div class="community_box box5">
+              <div class="community_box box5" data-tilt data-tilt-scale="1.1">
                 <a href="https://lu.ma/DesignandCode" style="text-decoration: none;" target="_blank">
                   <img src="./assets/img/Partners/DC_updated_Logo.png" class="communityPartner__image" alt="">
                 </a>
               </div>
-            <div class="community_box box5">
+            <div class="community_box box5" data-tilt data-tilt-scale="1.1">
               <a href="https://linktr.ee/lwmcommunity" style="text-decoration: none;" target="_blank">
                 <img src="./assets/img/Partners/LWM.png" class="communityPartner__image" alt="">
               </a>
@@ -1451,6 +1450,9 @@ window.addEventListener("scroll", navToTop);
   <!--Swiper JS-->
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
   <script src="assets/js/swipper.js"></script>
+
+  <!-- Vanilla Tilt -->
+  <script src="./assets/vanilla-tilt/dist/vanilla-tilt.js"></script>
 
 </body>
 
