--- a/blog.html
+++ b/blog.html
@@ -66,22 +66,22 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">
+              <a class="nav-link" href="/#about">
                 About
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#testimonials">
+              <a class="nav-link" href="/#testimonials">
                 Team
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#events">
+              <a class="nav-link" href="/#events">
                 Events
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#opportunity">
+              <a class="nav-link" href="/#opportunity">
                 Opportunity
               </a>
             </li>
@@ -107,6 +107,7 @@
 
 
 <br><br><br><br>
+<br><br>
 <div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
   <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Our Blog</h2>
   <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
