added email validation in form

--- a/benefit.html
+++ b/benefit.html
@@ -318,7 +318,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
-                    <input type="text" placeholder="Email" id="email" class="form-control" name="email" required
+                    <input type="email" placeholder="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" id="email" class="form-control" name="email" required
                       data-error="Please enter your email">
                     <div class="help-block with-errors"></div>
                   </div>
