--- a/index.html
+++ b/index.html
@@ -1247,7 +1247,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
-                    <input type="text" placeholder="Email" id="email" class="form-control" name="email" required
+                    <input type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" placeholder="Email" id="email" class="form-control" name="email" required
                       data-error="Please enter your email">
                     <div class="help-block with-errors"></div>
                   </div>
