Removed unnecessary br tags

--- a/blog.html
+++ b/blog.html
@@ -106,10 +106,8 @@
         <!-- Header Area wrapper End -->
 
 
-<br><br><br><br>
-<br><br>
 <div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
-  <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Our Blog</h2>
+  <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Our Blogs</h2>
   <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
 </div>
 
