--- a/index.html
+++ b/index.html
@@ -1282,11 +1282,20 @@
     </div>
   </section>
   <!-- Contact Section End -->
-
-<!-- Live Chat added -->
 <!--Start of Tawk.to Script-->
-<srcipt src="./JS/Tawk.js"></srcipt>       <!--Re-allocated the code to JS Folder-->
-<!--End of Tawk.to Script-->
+<script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/615f64df157d100a41ab54f3/1fhea43dh';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
+  
 
   <!-- Footer Section Start -->
   <footer id="footer" class="footer-area section-padding">
