--- a/Privacy Policy Page/policy.html
+++ b/Privacy Policy Page/policy.html
@@ -30,56 +30,41 @@
     <div class="container my-3">
         <div id="two">
 
-            <p>This policy describes our privacy practices for the websites where it is posted. It also applies to our
-                practices for our mobile phone and text programs.</p><br>
+            <p>This policy explains how we handle personal information on the websites where it is published. It also applies to our mobile phone and text messaging practises.</p><br>
 
             <h4>INFORMATION WE COLLECT</h4><br>
-            <p>Contact Information: For example, we might collect your name, phone number or email address. Demographic
-                Information: We might, for example, collect your age.
-                We collect this and other information using the tracking tools described in this policy.</p><br>
+            <p>We may collect your name, phone number, or email address as contact information. We may collect demographic information about you, such as your age. </p><br>
 
             <h4>HOW WE COLLECT INFORMATION</h4><br>
-            <p>We collect information directly from you. For example, when you contact us through a website, We collect
-                information if you leave comments or make contact requests.
-                We collect information from you passively. If you are on a mobile device and use a location based
-                service, for example, then we will collect your location. We use common tracking tools like browser
-                cookies to collect information passively. We may also use web beacons. We collect information from third
-                parties. This information might be combined with information we already have.</p><br>
+            <p>We obtain information from you directly. We collect information when you leave comments or make contact requests, for example, when you contact us through 
+               a website. We passively collect information from you. We will collect your location if you are on a mobile device and use a location-based service. 
+               Third-party data is collected by us. This data could be combined with other data we already have.</p><br>
 
             <h4>HOW WE USE INFORMATION</h4><br>
-            <p>We use your information as is disclosed at the time we collect the information and in the following ways:
-                <br>
-                (To respond to your requests or inquiries. For example, we use your information to contact you. We
-                might also use your information to register you for a promotion on our website. Policy or our website
-                Terms, to answer your querry.
+            <p> To respond to your inquiries and requests. We use your information to contact you, for example. Your information may also be used to register you for a promotion on our website. 
+                To respond to your question, please see our website's Terms and Conditions.
             </p><br>
 
 
             <h4>SECURITY</h4><br>
-            <p>We use industry standard measures to protect personal information. We cannot guarantee that you will be
-                completely secure, however. We recommend that you use caution when using the Internet or mobile devices.
-                Further, Our Site may use technologies such as cookies to provide visitors with tailored information
-                upon each visit. Cookies are a common part of many commercial Websites that allow small text files to be
-                sent by a Website, accepted by a Web browser and then placed on your hard drive as recognition for
-                repeat visits to the Site. Every time you visit Our Site, Our servers, through cookies, pixels and/or
-                GIF files, collect basic technical information such as your domain name, the address of the last URL
-                visited prior to clicking through to the Site, and your browser and operating system. You do not need to
-                enable cookies to visit Our Site; however, some parts of the Site and some services may be more
-                difficult or impossible to use if cookies are disabled. To emphasize, cookies are not linked to any
-                Personal Information while on this Site. It does not contain your name, address, telephone number, or
-                email address.</p> <br>
+            <p>To protect personal information, we employ industry-standard safeguards. However, we cannot guarantee that you will be completely safe. 
+               When using the Internet or mobile devices, we recommend that you exercise caution. Additionally, Our Site may employ technologies such as cookies to 
+               provide visitors with personalised information based on their previous visits. Cookies are small text files sent by a website, accepted by a Web browser, 
+               and then stored on your hard drive as recognition for future visits to the site. Every time you visit Our Site, Our servers collect basic technical information such as 
+               your domain name, the address of the last URL you visited before clicking through to the Site, and your browser and operating system using cookies, pixels, 
+               and/or GIF files. You do not need to enable cookies to visit Our Site; however, if cookies are disabled, some parts of the Site and some services may be more 
+               difficult or impossible to use. To be clear, cookies on this site are not linked to any Personal Information. Your name, address, phone number, and email address 
+               are not included.</p> <br>
 
             <h4>LINKS</h4> <br>
-            <p>This Site may contain links to other websites that CodeIn community may not own or operate. We cannot
-                control
-                and we are not responsible for the privacy practices or content of such other websites. We encourage you
-                to read the privacy statements of each and every website that collects personal information. This Policy
-                only applies to the personal information collected on this Site.</p> <br>
+            <p>This Site may contain links to other websites that are not owned or operated by the CodeIn community. We have no control over, and are not liable for, 
+                the privacy practices or content of other websites. We recommend that you read the privacy statements of any website that collects personal data. 
+                This Policy only applies to the personal data gathered on this website.</p> <br>
 
 
             <h4>POLICY UPDATES</h4><br>
-            <p>We will post any changes on the Site's homepage. Check here for the most recent version of our policy.
-                Where permitted by law, changes to our policy will be applied to information we already maintain.</p>
+            <p>Any changes will be announced on the Site's homepage. The most recent version of our policy can be found here. Changes to our policy will be applied to
+               information we already have where permitted by law.</p>
             <br>
         </div>
     </div>
